argo/cd/overlays/infra/shared/argo-events/resources/github-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: github-gateway
  # namespace: argo-events
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: github.dev.tensorleap.ai
spec:
  rules:
    - host: github.dev.tensorleap.ai
      http:
        paths:
          - backend:
              serviceName: github-gateway-svc
              servicePort: github-gateway
            path: /
  tls:
    - hosts:
        - github.dev.tensorleap.ai
      secretName: github-ing-secret # do not change, this is provided by Argo CD
